@@ -31,10 +31,10 @@ int INPtypelook(char *type)
        if ((ft_sim->devices[i]) == NULL)
              printf("In INPtypelook, checking model type = %s against existing model = %s, . . .\n", type, "NULL");		
        else
-             printf("In INPtypelook, checking model type = %s against existing model = %s, . . .\n", type, (*(ft_sim->devices)[i]).name );	
+             printf("In INPtypelook, checking model type = %s against existing model = %s, . . .\n", type, ft_sim->devices[i]->name);
 #endif
 
-	if ((ft_sim->devices)[i] && strcmp(type, (*(ft_sim->devices)[i]).name) == 0) {
+	if (ft_sim->devices[i] && strcmp(type, ft_sim->devices[i]->name) == 0) {
 	    /* found the device - return it */
 
 #ifdef TRACE
